--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -1,16 +1,16 @@
-{{ if isset .Site.Params "clients" }}
-{{ if .Site.Params.clients.enable }}
-{{ if isset .Site.Data "clients" }}
-{{ if gt (len .Site.Data.clients) 0 }}
+{{ if isset .Site.Params "sponsors" }}
+{{ if .Site.Params.sponsors.enable }}
+{{ if isset .Site.Data "sponsors" }}
+{{ if gt (len .Site.Data.sponsors) 0 }}
 <section class="bar background-gray no-mb">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="heading text-center">
-                  <h2>{{ .Site.Params.clients.title | markdownify }}</h2>
+                  <h2>{{ .Site.Params.sponsors.title | markdownify }}</h2>
                 </div>
                 <p class="lead">
-                  {{ .Site.Params.clients.subtitle | markdownify }}
+                  {{ .Site.Params.sponsors.subtitle | markdownify }}
                 </p>
 
                 <ul class="owl-carousel customers"
@@ -18,7 +18,7 @@
                     data-autoplay="{{ default false .Site.Params.CarouselCustomers.auto_play }}"
                     data-slide-speed="{{ default 2000 .Site.Params.CarouselCustomers.slide_speed }}"
                     data-pagination-speed="{{ default 1000 .Site.Params.CarouselCustomers.pagination_speed }}">
-                    {{ range sort .Site.Data.clients "weight" }}
+                    {{ range sort .Site.Data.sponsors "weight" }}
                     <li class="item" title="{{ .name }}">
                         {{ if .url }}
                           <a href="{{ .url }}" target="_blank">
