--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,7 +25,7 @@
 
         {{ partial "recent_posts.html" . }}
 
-        {{ partial "sponsors.html" . }}
+        {{ partial "sponsors-2.html" . }}
 
         {{ partial "footer.html" . }}
 
