--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -14,10 +14,10 @@
                 </p>
 
                 <ul class="owl-carousel customers"
-                    data-items="{{ default 6 .Site.Params.CarouselCustomers.items }}"
-                    data-autoplay="{{ default false .Site.Params.CarouselCustomers.auto_play }}"
-                    data-slide-speed="{{ default 2000 .Site.Params.CarouselCustomers.slide_speed }}"
-                    data-pagination-speed="{{ default 1000 .Site.Params.CarouselCustomers.pagination_speed }}">
+                    data-items="{{ default 6 .Site.Params.CarouselSponsors.items }}"
+                    data-autoplay="{{ default false .Site.Params.CarouselSponsors.auto_play }}"
+                    data-slide-speed="{{ default 2000 .Site.Params.CarouselSponsors.slide_speed }}"
+                    data-pagination-speed="{{ default 1000 .Site.Params.CarouselSponsors.pagination_speed }}">
                     {{ range sort .Site.Data.sponsors "weight" }}
                     <li class="item" title="{{ .name }}">
                         {{ if .url }}
