--- a/static/css/style.blue.css
+++ b/static/css/style.blue.css
@@ -3580,3 +3580,29 @@ a.list-group-item.active > .badge,
   left: 15px;
   right: 15px;
 }
+
+.sponsor {
+  display: flex;
+  align-items: center; /* Vertically center images */
+  justify-content: center; /* Horizontally center if needed */
+  height: 100px; /* Adjust based on your layout */
+  overflow: hidden;
+}
+
+.sponsor img {
+  display: block;
+  max-height: 80px; /* Limit the height but maintain aspect ratio */
+  width: auto; /* Maintain aspect ratio */
+  
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+  filter: gray;
+  -webkit-filter: grayscale(100%);
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+.sponsor img:hover {
+  filter: none;
+  -webkit-filter: none;
+}
