--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -2,8 +2,17 @@
 {{ if .Site.Params.sponsors.enable }}
 {{ if isset .Site.Data "sponsors" }}
 {{ if gt (len .Site.Data.sponsors) 0 }}
-<section class="bar background-gray no-mb">
+<section class="bar background-gray">
     <div class="container">
+        {{ $elements := default 5 .Site.Params.sponsors.cols }}
+        {{ $sponsors := sort .Site.Data.sponsors "weight" }}
+        
+        {{ $total_rows := div (len $sponsors) $elements }}
+
+        {{ if gt (mod (len $sponsors) $elements) 0 }}
+          {{ $total_rows = add $total_rows 1 }}
+        {{ end }}
+
         <div class="row">
             <div class="col-md-12">
                 <div class="heading text-center">
@@ -13,25 +22,30 @@
                   {{ .Site.Params.sponsors.subtitle | markdownify }}
                 </p>
 
-                <ul class="owl-carousel customers"
-                    data-items="{{ default 6 .Site.Params.CarouselSponsors.items }}"
-                    data-autoplay="{{ default false .Site.Params.CarouselSponsors.auto_play }}"
-                    data-slide-speed="{{ default 2000 .Site.Params.CarouselSponsors.slide_speed }}"
-                    data-pagination-speed="{{ default 1000 .Site.Params.CarouselSponsors.pagination_speed }}">
-                    {{ range sort .Site.Data.sponsors "weight" }}
-                    <li class="item" title="{{ .name }}">
-                        {{ if .url }}
-                          <a href="{{ .url }}" target="_blank">
-                            <img src="{{ .image }}" alt="{{ .name }}" class="img-responsive" />
-                          </a>
-                        {{ else }}
-                          <img src="{{ .image }}" alt="{{ .name }}" class="img-responsive" />
+                {{ range $i, $sequence := seq $total_rows }}
+                <div class="row row-{{ $i }} row-{{ if eq (mod $i 2) 0 }}odd{{ else }}even{{ end }}">
+                    {{ range $j, $sequence2 := (seq $elements) }}
+
+                        {{ $sponsor_index := add (mul $i $elements) $j }}
+                        {{ if lt $sponsor_index (len $sponsors) }}
+                            {{ $element := index $sponsors $sponsor_index }}
+
+                            <div class="col-md-{{ div 12 $elements }} col-{{ $j }} col-{{ if eq (mod $j 2) 0 }}odd{{ else }}even{{ end }}">
+                                <div class="sponsor">
+                                    {{ if $element.url }}
+                                    <a href="{{ $element.url }}" target="_blank">
+                                    <img src="{{ $element.image }}" alt="{{ $element.name }}" class="img-responsive" />
+                                    </a>
+                                {{ else }}
+                                    <img src="{{ $element.image }}" alt="{{ $element.name }}" class="img-responsive" />
+                                {{ end }}
+                                </div>
+                            </div>
                         {{ end }}
-                    </li>
                     {{ end }}
-                </ul>
-                <!-- /.owl-carousel -->
-            </div>
+                </div>
+                {{ end }}
+            </div> 
         </div>
     </div>
 </section>
